Restyled desktop and mobile to remove ginormous border on header…also put fixed widths on various media queries for div#page. Still need to do menu slide out. Currently have mobile menu visible.

--- a/highdramma/dev/_main.scss
+++ b/highdramma/dev/_main.scss
@@ -17,10 +17,9 @@ html {
 }
 
 body {
-	width: 90%;
 	max-width: 960px;
 	height: auto;
-	margin: 0 auto !important;
+	margin: 0 auto;
 	overflow: hidden;
 	overflow-x: hidden;
 }
@@ -328,8 +327,7 @@ html {
 	box-sizing: inherit;
 }
 
-body#page {
-	padding-top: 50px;
+div#page {
 	background: #fff; /* Fallback for when there is no custom background color defined. */
 	border: 1px solid #d3d3d3;
 }
@@ -503,14 +501,16 @@ a:active {
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
+nav#mobile-navigation {
+	display: none;
+}
+
+div#desktop-main-nav {
+	z-index: 1;
+}
+
 .main-navigation {
-	clear: both;
-	position: relative;
-	display: block;
-	// width: 100%;
-	// padding-top: 72px;
-	/*width: 575px;*/
-	// width: 59.752%;
+	float: right;
 	font-family: 'Reenie Beanie', serif;
 	font-size: 2rem;
 	background-color: #fff;
@@ -598,9 +598,7 @@ a:active {
 	background: #2CBF89;
 }
 
-div.menu-main-navigation-container {
-	float: right;
-	width: 70%;
+div#desktop-main-nav {
 	padding-top: 70px;
 }
 
@@ -652,17 +650,22 @@ div.menu-main-navigation-container {
 }
 
 /*Social media*/
-#social-menu {
+div#social-menu {
 	position: relative;
-	top: -130px;
-	left: 782px;
+	float: right;
+	width: 100%;
+	z-index: 1;
+	margin-top: -124px;
+	padding-right: 30px;
 	text-align: right;
 	font-family: 'Fontawesome';
 	font-size: 32px;
+	background-color: #2CBF89;
 }
 
 #social-menu ul {
 	display: inline;
+	float: right;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -671,7 +674,7 @@ div.menu-main-navigation-container {
 #social-menu ul li {
 	position: relative;
 	float: left;
-	padding: 5px 10px;
+	padding: 0px 10px;
 }
 
 #social-menu li a {
@@ -855,32 +858,19 @@ img#mobile-menu-icon {
 	display: none;
 }
 
-.site-branding {
-	// height: 164px;
-}
-
-div.site-branding img {
-	float: left;
-}
-
-#masthead {
-	// clear: both;
+header#masthead {
 	width: 100%;
-	margin-top: -72px;
-	// height: 164px;
-	// position: relative;
-	// border-bottom: solid 45px #2CBF89;
 }
 
 #site-logo {
+	position: relative;
+	float: left;
 	margin-left: 36px;
 	margin-top: 33px;
+	z-index: 2;
 }
 
-#masthead h1 {
-	display: none;
-}
-
+#masthead h1,
 #masthead h2 {
 	display: none;
 }
