--- a/highdramma/dev/_mobile.scss
+++ b/highdramma/dev/_mobile.scss
@@ -8,61 +8,71 @@ body {
 	font-family: Helvetica, sans-serif;
 }
 
+div#page {
+	max-width: 680px;
+	margin: 0 auto;
+}
+
 body div.main-content.open-sidebar {
 	left: 215px;
 	position: static;
 }
 
-nav#site-navigation {
-			// display: none;
-			// clear: right;
-			position: absolute;
-			left: 10px;
-			top: 10px;
-			width: 100%;
-			// margin-top: 25px;
-			// padding-left: 20px;
-			font-family: Helvetica, sans-serif;
-			font-size: 1em;
+div#desktop-main-nav {
+	display: none;
+}
 
-				ul#primary-menu {
-						li {
-							clear: left;
-						}
+nav#mobile-navigation {
+	display: block;
+	position: absolute;
+	left: -37px;
+	top: 90px;
+	width: 100%;
+	font-family: Helvetica, sans-serif;
+	font-size: 1em;
 
-						ul.sub-menu {
-							left: auto;
-							position: static;
-							z-index: 1;
-							padding-left: 30px;
-							text-align: left;
-						}
+		ul#mobile-menu.menu {
+			list-style: none;
+
+				li {
+					clear: left;
+					padding: 5px 0px;
+				}
+
+				a {
+					text-decoration: none;
+					color: #000;
+				}
+
+				ul.sub-menu {
+					list-style: none;
+					text-align: left;
 				}
 		}
+}
 
 
 header#masthead {
-	height: 115px;
+	height: 91px;
 	background-color: #2cbf89;
 
 		img#mobile-menu-icon {
 			display: inline;
 			z-index: 2;
 			float: left;
-			margin: 39px 13px -21px 29px;
+			margin: 30px 13px -21px 29px;
 		}
 
 		div.site-branding {
 			position: relative;
-			height: auto;
 
 				img#site-logo {
 					position: absolute;
-					top: 10px;
-					right: 14px;
+					top: 7px;
+					right: 19px;
 					margin-top: 0;
-					width: 16%;
-					max-width: 90px;
+					width: 12%;
+					max-width: 75px;
 				}
 		}
 }
@@ -109,7 +119,7 @@ div#primary #main {
 						width: 100%;
 						max-width: 400px;
 						height: 261px;
-						margin: 0% 6%;
+						margin-left: 15%;
 					}
 			}
 
@@ -128,7 +138,7 @@ div#primary #main {
 --------------------------------------------------------------*/
 div.member-menu {
 	width: 100%;
-	margin-top: -34px;
+	margin-top: 0px;
 	font-family: Helvetica, sans-serif;
 	font-size: 0.8em;
 	text-transform: uppercase;
@@ -194,7 +204,8 @@ div#primary #main {
 						margin-left: 22px;
 							
 						p {
-							font-family: Helvetica, sans-serif;	
+							font-family: Helvetica, sans-serif;
+							font-style: italic;
 							font-size: 0.8em;
 							letter-spacing: 1px;
 							line-height: 1em;
@@ -236,8 +247,16 @@ div#primary #main {
 ## Smallest mobile styles
 --------------------------------------------------------------*/
 @media only screen and (max-width: 499px) {
+div#page {
+	width: 100%;
+	max-width: 320px;
+	margin: 0 auto;
+	padding: 0;
+	border: none;
+}
+
 header#masthead {
-	height: 91px;
+	padding-top: 0px;
 
 		div.site-branding {
 				a {
@@ -253,8 +272,8 @@ header#masthead {
 				h1#site-title {
 					display: inline;
 					float: right;
-					margin-top: -50px;
-					margin-bottom: 0;
+					margin-top: -14px;
+					margin-bottom: 57px;
 					padding-right: 15px;
 					font-size: 1.3em;
 				}
@@ -293,7 +312,12 @@ div#primary {
 --------------------------------------------------------------*/
 	div#primary #main {
 		div.member-menu {
-			margin-top: 7px;
+			display: none;
+			// margin-top: 21px;
+
+				ul {
+					padding: 0;
+				}
 		}
 
 		section.member-biography {
@@ -323,8 +347,16 @@ div#primary {
 				aside.member-quote {
 					width: 100%;
 					margin-right: 0;
+
+						p {
+							font-size: 1.5rem;
+						}
 				}
-		}		
+		}	
+
+		section.member-favorites {
+			width: 100%;
+		}	
 	}
 
 }
